first attempt connect chatgpt api

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.telegram:telegrambots:6.5.0'
+    implementation 'com.theokanning.openai-gpt3-java:client:0.9.0'
 }
 
 test {
